--- a/index.html
+++ b/index.html
@@ -603,18 +603,18 @@
             <div class="forma">
                 <div class="colum_form">
                     <div class="item_form">
-                       <label><input type="name" placeholder="Your Name"></label> 
+                      <input type="name" placeholder="Your Name" value="">
                     </div>
                     <div class="item_form">
-                        <input type="text" placeholder="Subject">
+                        <input type="text" placeholder="Subject" value="">
                     </div>
                 </div>
                     <div class="colum_form">
                         <div class="item_form">
-                            <input type="email" placeholder="Your Email">
+                            <input type="email" placeholder="Your Email" value="">
                         </div>
                     <div class="item_form">
-                        <input type="text" placeholder="Project Budget">
+                        <input type="text" placeholder="Project Budget" value="">
                     </div>
                 </div>
             </div>
@@ -622,7 +622,7 @@
     <div class="message">
         <textarea  name="masseg" cols="30" rows="10" placeholder="Your Message" ></textarea>
     </div>
-    <button type="submit">Send Message</button>
+    <button class="btnSubmit" type="submit">Send Message</button>
         </article>
 </section>
 
