try work with form

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                       <input type="name" placeholder="Your Name" value="">
                     </div>
                     <div class="item_form">
-                        <input type="text" placeholder="Subject" value="">
+                        <input type="Subject" placeholder="Subject" value="">
                     </div>
                 </div>
                     <div class="colum_form">
@@ -614,13 +614,13 @@
                             <input type="email" placeholder="Your Email" value="">
                         </div>
                     <div class="item_form">
-                        <input type="text" placeholder="Project Budget" value="">
+                        <input type="Project" placeholder="Project Budget" value="">
                     </div>
                 </div>
             </div>
         
     <div class="message">
-        <textarea  name="masseg" cols="30" rows="10" placeholder="Your Message" ></textarea>
+        <textarea  name="masseg" cols="30" rows="10" placeholder="Your Message" value="" ></textarea>
     </div>
     <button class="btnSubmit" type="submit">Send Message</button>
         </article>
